# burndrop-contracts

./: .gitignore  .gitpod.Dockerfile  Cargo.toml  LICENSE  NOTICE  README.md  package.json
.github/workflows/: Basic.yml
src/: constants.rs  contract.rs  error.rs  execute.rs  helpers.rs  integration_tests.rs  lib.rs  msg.rs  query.rs  state.rs  swap.rs
src/data/: compensation.rs
src/executions/: guild.rs  mod.rs  overridden_rounds.rs  round.rs  swap.rs  user.rs
src/states/: config.rs  guild.rs  mod.rs  overridden_rounds.rs  state.rs  user.rs
src/testing/: instantiate.rs  mod.rs  terra_bindings.rs  utils.rs
src/testing/executions/: guild.rs  mod.rs  overridden_rounds.rs  round.rs  swap.rs  user.rs
src/testing/queries/: config.rs  mod.rs  user.rs
src/types/: common.rs  mod.rs  output_token.rs  overridden_round.rs  swap_round.rs
typescript/deployer/: package.json  tsconfig.json
typescript/deployer/columbus-5/: 1-deploy.ts  2-register_starting_user.ts  3-burn_uusd.ts  4-round.ts
typescript/deployer/columbus-5-test/: 1-deploy.ts  2-register_starting_user.ts
typescript/deployer/cosmos/: tx.ts
typescript/deployer/localterra/: 1-deploy.ts  2-register_starting_user.ts  3-burn_uusd.ts
typescript/deployer/utils/: config.ts
typescript/sdk/: .swcrc  package.json  tsconfig.json
typescript/sdk/schema/: burndrop-contracts.json
typescript/sdk/scripts/: codegen.js
typescript/sdk/src/: Burndrop.client.ts  Burndrop.message-composer.ts  Burndrop.react-query.ts  Burndrop.recoil.ts  Burndrop.types.ts  index.ts
typescript/sdk/types/: Burndrop.client.d.ts  (+7 more)
(+8 files in other folders)
