[package]
name = "burndrop-contracts"
version = "0.3.0"
authors = ["Unorthodox Labs, LLC"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/mint-cash/burndrop-contracts"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.11
"""

[dependencies]
classic-bindings = "0.2.0"
cosmwasm-schema = "1.5.0"
cosmwasm-std = { version = "1.5.0", features = ["cosmwasm_1_1"] }
cw-storage-plus = "1.1.0"
cw2 = "1.1.1"
schemars = "0.8.15"
semver = "1.0.21"
serde = { version = "1.0.189", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.49" }
anyhow = "1.0.79"
phf = { version = "0.11.2", features = ["macros"] }

[dev-dependencies]
cw-multi-test = "0.17.0"
